--- a/policies.html
+++ b/policies.html
@@ -17,7 +17,7 @@
 
     <script>
         async function extractPDF() {
-            const pdfUrl = "document.pdf"; // PDF file should be in the same folder as this HTML
+            const pdfUrl = "document1.pdf"; // PDF file should be in the same folder as this HTML
             const loadingTask = pdfjsLib.getDocument(pdfUrl);
 
             try {
