--- a/policies.html
+++ b/policies.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Viewer</title>
+    <title>PDF Opener</title>
 </head>
 <body>
-    <h2>PDF Viewer</h2>
-    <iframe src="document1.pdf" width="100%" height="600px"></iframe>
+    <h2>Open or Download PDF</h2>
+    
+    <!-- PDF View in Browser -->
+    <iframe src="sample.pdf" width="100%" height="600px"></iframe>
+
+    <br><br>
+
+    <!-- Download Button -->
+    <a href="sample.pdf" download>
+        <button>Download PDF</button>
+    </a>
+
+    <!-- Open in New Tab -->
+    <br><br>
+    <a href="sample.pdf" target="_blank">
+        <button>Open in New Tab</button>
+    </a>
 </body>
 </html>
