--- a/ponkana.html
+++ b/ponkana.html
@@ -3,25 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Opener</title>
+    <title>Ponkana Funerals</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #000; /* Black background */
+            color: #FFD700; /* Gold text */
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background: #1a1a1a; /* Dark gray for contrast */
+            box-shadow: 0px 0px 10px rgba(255, 215, 0, 0.5); /* Gold glow */
+            border-radius: 8px;
+        }
+        h1, h2 {
+            color: #FFD700; /* Gold headings */
+        }
+        p {
+            color: #fff; /* White text for readability */
+        }
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 10px;
+            background-color: #FFD700; /* Gold button */
+            color: #000; /* Black text */
+            text-decoration: none;
+            border-radius: 5px;
+            cursor: pointer;
+            border: none;
+            font-weight: bold;
+        }
+        .btn:hover {
+            background-color: #c9a000; /* Darker gold on hover */
+        }
+        #contact-details {
+            display: none;
+            margin-top: 20px;
+            padding: 10px;
+            background: #333; /* Dark gray box */
+            border-radius: 5px;
+            color: #FFD700; /* Gold text */
+        }
+    </style>
+    <script>
+        function toggleContact() {
+            var contactDetails = document.getElementById("contact-details");
+            if (contactDetails.style.display === "none") {
+                contactDetails.style.display = "block";
+            } else {
+                contactDetails.style.display = "none";
+            }
+        }
+    </script>
 </head>
 <body>
-    <h2>Open or Download PDF</h2>
-    
-    <!-- PDF View in Browser -->
-    <iframe src="sample.pdf" width="100%" height="600px"></iframe>
 
-    <br><br>
+    <div class="container">
+        <h1>Welcome to Ponkana Funerals</h1>
 
-    <!-- Download Button -->
-    <a href="sample.pdf" download>
-        <button>Download PDF</button>
-    </a>
+        <h2>About Us</h2>
+        <p>
+            At <strong>Ponkana Funerals</strong>, we are committed to providing compassionate and dignified funeral services.  
+            With years of experience, we understand the importance of honoring loved ones with respect and care.  
+            Our team ensures a seamless process, supporting families during their most difficult times.
+        </p>
 
-    <!-- Open in New Tab -->
-    <br><br>
-    <a href="sample.pdf" target="_blank">
-        <button>Open in New Tab</button>
-    </a>
+        <button class="btn" onclick="toggleContact()">Contact Us</button>
+        <a href="policies.html" class="btn">Our Policies</a>
+
+        <div id="contact-details">
+            <h3>Contact Information</h3>
+            <p><strong>Phone:</strong> +27 123 456 789</p>
+            <p><strong>Email:</strong> info@ponkanafurnerals.com</p>
+            <p><strong>Address:</strong> 123 Main Street, Johannesburg, South Africa</p>
+        </div>
+    </div>
+
 </body>
-</html>
+    </html>
