--- a/policies.html
+++ b/policies.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Opener</title>
+    <script>
+        // Open the PDF automatically when the page loads
+        window.onload = function() {
+            window.open('sample.pdf', '_blank');
+        };
+    </script>
 </head>
 <body>
     <h2>Open or Download PDF</h2>
