--- a/ponkana.html
+++ b/ponkana.html
@@ -50,6 +50,13 @@
             border-radius: 5px;
             color: #FFD700; /* Gold text */
         }
+        .robot-icon {
+            display: block;
+            margin: 20px auto;
+            width: 80px;
+            height: 80px;
+            cursor: pointer;
+        }
     </style>
     <script>
         function toggleContact() {
@@ -83,6 +90,12 @@
             <p><strong>Email:</strong> info@ponkanafurnerals.com</p>
             <p><strong>Address:</strong> 123 Main Street, Johannesburg, South Africa</p>
         </div>
+
+        <!-- Robot Icon linking to robot.html -->
+        <a href="robot.html">
+            <img src="robot.png" alt="Robot Icon" class="robot-icon">
+        </a>
+
     </div>
 
 </body>
