--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Central SMS Store</title>
-    <script src="https://js.yoco.com/sdk/v1/yoco-sdk-web.js"></script>
     <style>
         body {
             background-color: white;
@@ -34,8 +32,7 @@
             <option value="0.60">One SMS for R0.60</option>
             <option value="1.20">Two SMS for R1.20</option>
         </select>
-        <button id="buyBtn">Buy SMS</button>
-        <button id="checkoutBtn" class="hidden" onclick="checkout()">Checkout</button>
+        <button id="selectBtn">Select</button>
         <br><br>
         <select onchange="navigatePage(this.value)">
             <option value="">More Options</option>
@@ -46,95 +43,63 @@
         <textarea id="message" placeholder="Type your message here..."></textarea>
         <br>
         <button id="sendBtn">Send SMS</button>
-    </div>
-    <script>
-        let balance = parseFloat(localStorage.getItem('balance')) || 0;
-        document.getElementById("balance").innerText = balance.toFixed(2);
-        
-        window.onload = function() {
-            let yoco = new YocoSDK({
-                publicKey: "pk_live_88415492P4RYmO49b224" // Ensure this is a valid public key
-            });
+    </div><script>
+    let balance = parseFloat(localStorage.getItem('balance')) || 0;
+    document.getElementById("balance").innerText = balance.toFixed(2);
 
-            document.getElementById("buyBtn").addEventListener("click", function() {
-                let smsValue = parseFloat(document.getElementById("smsOptions").value);
-                if (!smsValue) {
-                    alert("Please select an SMS package.");
-                    return;
-                }
+    document.getElementById("selectBtn").addEventListener("click", function() {
+        const smsValue = document.getElementById("smsOptions").value;
+        if (!smsValue) {
+            alert("Please select an SMS package.");
+            return;
+        }
 
-                // Debugging: Log the value being passed
-                console.log("Attempting to checkout with amount:", smsValue * 100);
+        localStorage.setItem("selectedSMSValue", smsValue);
+        window.location.href = "checkout.html";
+    });
 
-                let checkoutHandler = yoco.checkout({
-                    amountInCents: smsValue * 100,
-                    currency: "ZAR",
-                    name: "Central SMS",
-                    description: "SMS Purchase",
-                    callback: function (result) {
-                        if (result.error) {
-                            alert("Payment failed: " + result.error.message);
-                        } else {
-                            balance += smsValue;
-                            localStorage.setItem("balance", balance);
-                            document.getElementById("balance").innerText = balance.toFixed(2);
-                            document.getElementById("checkoutBtn").classList.remove("hidden");
-                            alert("Payment successful! Your SMS balance has been updated.");
-                        }
-                    }
-                });
-                checkoutHandler.open();
-            });
-        };
+    document.getElementById("sendBtn").addEventListener("click", function() {
+        if (balance < 0.60) {
+            alert("Insufficient balance. Please buy more SMS.");
+            return;
+        }
 
-        document.getElementById("sendBtn").addEventListener("click", function() {
-            if (balance < 0.60) {
-                alert("Insufficient balance. Please buy more SMS.");
-                return;
-            }
+        let message = document.getElementById("message").value.trim();
+        if (!message) {
+            alert("Please enter a message before sending.");
+            return;
+        }
 
-            let message = document.getElementById("message").value.trim();
-            if (!message) {
-                alert("Please enter a message before sending.");
-                return;
-            }
-
-            // Simulate sending SMS
-            fetch("https://api.smsprovider.com/send", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    apiKey: "DC2F3E7522074B1F924BBF954093265C",
-                    message: message
-                })
+        fetch("https://api.smsprovider.com/send", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+                apiKey: "DC2F3E7522074B1F924BBF954093265C",
+                message: message
             })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    balance -= 0.60;
-                    localStorage.setItem("balance", balance);
-                    document.getElementById("balance").innerText = balance.toFixed(2);
-                    alert("SMS sent successfully!");
-                } else {
-                    alert("Failed to send SMS: " + data.error);
-                }
-            })
-            .catch(error => {
-                alert("Error sending SMS: " + error.message);
-            });
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.success) {
+                balance -= 0.60;
+                localStorage.setItem("balance", balance);
+                document.getElementById("balance").innerText = balance.toFixed(2);
+                alert("SMS sent successfully!");
+            } else {
+                alert("Failed to send SMS: " + data.error);
+            }
+        })
+        .catch(error => {
+            alert("Error sending SMS: " + error.message);
         });
+    });
 
-        function checkout() {
-            localStorage.setItem("selectedBalance", balance);
-            window.location.href = "checkout.html";
+    function navigatePage(page) {
+        if (page) {
+            window.location.href = page;
         }
+    }
+</script>
 
-        function navigatePage(page) {
-            if (page) {
-                window.location.href = page;
-            }
-        }
-    </script>
 </body>
 </html>
-
