--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Central SMS</title>
-    <meta http-equiv="refresh" content="3; url=central.html"> <!-- Redirect after 3 seconds -->
+    <meta http-equiv="refresh" content="3; url=menu.html"> <!-- Redirect after 3 seconds -->
     <style>
         body {
             font-family: Arial, sans-serif;
